--- a/style.css
+++ b/style.css
@@ -94,11 +94,13 @@ h2{
 	text-align: center;
 	font-size: 2.5em;
 	margin: 1em;
+	font-weight: bold;
 }
 h4{
 	text-align: center;
 	font-size: 2em;
 	margin: 1em;
+	font-weight: bold;
 }
 h5{
 	text-align: center;
